# cityjson-rs

./: AGENTS.md  BINDINGS_IMPLEMENTATION_PLAN_v0.10.0.md  BINDINGS_REVIEW_v0.9.0.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN_v0.9.0.md  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup-proj/: action.yml
.github/actions/setup-proj/windows/: cmake.cmd  sqlite3.cmd
.github/workflows/: ci.yml  release.yml
crates/cityjson-arrow/: Cargo.toml
crates/cityjson-arrow/src/: error.rs  lib.rs
crates/cityjson-arrow/src/citydb/: geometry.rs  mod.rs
crates/cityjson-index/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile
crates/cityjson-index/docs/: glossary.md  normalize-package-cityobject-index-plan.md
crates/cityjson-index/docs/adr/: 006-index-feature-package-cityobject-keys.md  007-normalize-package-cityobject-indexing.md  008-normalized-package-cityobject-indexing-supersedes-006.md  009-direct-staged-feature-reconstruction.md
crates/cityjson-index/docs/benchmarks/: 2026-06-02-pre-normalization-baseline.json  2026-06-02-pre-normalization-baseline.md  2026-06-03-baseline-release-cityjson.json  2026-06-03-current-release-cityjson.json  2026-06-03-implementation-release-cityjson.json  2026-06-03-release-cityjson-comparison.md  2026-06-04-cityobject-workloads-comparison.md  2026-06-04-current-cityobject-workloads.json  2026-06-04-current-optimized-subsets-all-layouts.json  2026-06-04-current-readpath.json  2026-06-04-previous-1f156f0-subsets-all-layouts.json  2026-06-04-previous-7ba8541-cityobject-workloads.json  2026-06-04-previous-8208c8e-readpath.json  2026-06-04-previous-vs-current-all-layout-subsets-comparison.md  2026-06-04-readpath-optimization-comparison.md  2026-06-04-release-subsets-cityjson-vs-cityjsonseq-comparison.md  2026-06-04-release-subsets-cityjson-vs-cityjsonseq.json  2026-06-04-release-subsets-historical-comparison.md  2026-06-04-scan-normalized-subsets-all-layouts.json  2026-06-04-scan-normalized-vs-current-optimized-subsets-comparison.md  2026-06-04-streaming-rebuild-comparison.md  2026-06-04-streaming-rebuild.json  all-benchmark-results.csv
crates/cityjson-index/ffi/core/: README.md
crates/cityjson-index/ffi/core/src/: lib.rs
crates/cityjson-index/ffi/core/tests/: plural_api_contract.rs
crates/cityjson-index/ffi/python/: README.md  pyproject.toml
crates/cityjson-index/ffi/python/src/cityjson_index/: __init__.py  _native.py
crates/cityjson-index/ffi/python/tests/: test_api.py
crates/cityjson-index/src/: benchmark.rs  lib.rs  main.rs
crates/cityjson-index/tests/: cityjson.rs  cityjsonseq.rs  cli.rs  corpus.rs  feature_files.rs  normalized_api.rs  normalized_schema.rs  profile.rs  terminology.rs
crates/cityjson-index/tests/common/: mod.rs  normalized.rs
crates/cityjson-index/tests/data/cityjson/amsup/: .cityjson-index.sqlite
crates/cityjson-index/tests/data/cityjsonseq/a/: fixtures.city.jsonl
crates/cityjson-index/tests/data/ndjson/amsup/: .cityjson-index.sqlite
crates/cityjson-json/docs/adr/: 009-keep-cityjsonseq-header-source-explicit.md
crates/cityjson-json/src/: facade.rs  lib.rs  v2_0.rs
crates/cityjson-json/tests/: v2_0.rs
crates/cityjson-lib/: Cargo.toml  README.md  build.rs
crates/cityjson-lib/ffi/core/: Cargo.toml
crates/cityjson-lib/ffi/core/include/cityjson_lib/: cityjson_lib.h
crates/cityjson-lib/ffi/core/src/: abi.rs  error.rs  exports.rs
crates/cityjson-lib/ffi/cpp/: CMakeLists.txt
crates/cityjson-lib/ffi/cpp/include/cityjson_lib/: cityjson_lib.hpp
crates/cityjson-lib/ffi/python/: pyproject.toml
crates/cityjson-lib/ffi/python/src/cityjson_lib/: __init__.py  _ffi.py
crates/cityjson-lib/ffi/python/tests/: test_api.py
crates/cityjson-lib/src/: error.rs  json.rs  lib.rs  ops.rs  proj.rs
crates/cityjson-lib/tests/: json_api.rs
crates/cityjson-parquet/: Cargo.toml
crates/cityjson-types/docs/dev/: geometry_test_corpus_cleanup_plan.md
crates/cityjson-types/src/backend/default/: boundary.rs  citymodel.rs  geometry_validation.rs  vertices.rs
crates/cityjson-types/src/backend/default/boundary/: test_cases.rs  tests.rs  wkb.rs
crates/cityjson-types/src/resources/: mapping.rs
crates/cityjson-types/src/resources/mapping/: textures.rs
crates/cityjson-types/src/v2_0/: citymodel.rs  geometry.rs  geometry_draft.rs
crates/cityjson-types/tests/: vertices.rs
crates/cityjson-types/tests/v2_0/: geometry.rs
crates/cityjson-types/tests/v2_0/geometry/: acceptance.rs  editing.rs  fixtures.rs  instances.rs  roundtrip.rs
docs/: development.md
docs-site/: .gitignore  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  pyproject.toml
docs-site/.generated/api/doxygen-input/cityjson-index-c/: cityjson_index.h
docs-site/.generated/api/doxygen/cityjson-index-c/: Doxyfile
docs-site/.generated/api/doxygen/cityjson-index-c/xml/: Doxyfile.xml  cityjson__index_8h.xml  dir_14242153c4fb5ef4f00d8ad128b313ce.xml  dir_34ec43889a1862d6c0d5337dfd999ccc.xml  dir_5431f88450e813a17cfd02d007305e12.xml  dir_ea50fd50cb35e7a54de641d427bd1397.xml  index.xml  structcjx__bounds2d__t.xml  structcjx__bounds3d__t.xml  structcjx__cityobject__ref__t.xml  structcjx__feature__bounds__summary__t.xml  (+13 more)
docs-site/.generated/api/doxygen/cityjson-lib-c/: Doxyfile
docs-site/.generated/api/doxygen/cityjson-lib-cpp/: Doxyfile
docs-site/src/: content.config.ts
docs-site/src/components/: ApiCodeBlock.astro  GlobalLanguageSwitch.astro  Header.astro  LanguagePanel.astro  LanguageSwitcher.astro  MobileMenuFooter.astro
docs-site/src/content/docs/: index.mdx  reference.mdx
docs-site/src/content/docs/arrow/: index.md
docs-site/src/content/docs/index/: cityjson-index.mdx
docs-site/src/content/docs/lib/: cityjson-lib.mdx
docs-site/src/data/: api-reference.json  api-symbols.json
docs-site/src/scripts/: api-heading-ids.mjs  generate-api-reference.mjs  validate-symbols.mjs
docs-site/src/styles/: custom.css
docs-site/tests/: docs-poc.spec.ts
docs-site/tools/: check_docs_tools.py  extract_api.py
docs/adr/: 001-cityjson-geometry-editing-apis.md
(+212 files in other folders)
