[workspace]
resolver = "3"
members = [
    "crates/cityjson-types",
    "crates/cityjson-json",
    "crates/cityjson-arrow",
    "crates/cityjson-parquet",
    "crates/cityjson-lib",
    "crates/cityjson-lib/ffi/core",
    "crates/cityjson-lib/ffi/wasm",
    "crates/cityjson-fake",
    "crates/cityjson-index",
    "crates/cityjson-index/ffi/core",
]

[workspace.package]
version = "0.10.0"
edition = "2024"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/3DGI/cityjson"
authors = ["Balázs Dukai <balazs.dukai@3dgi.nl>"]

[workspace.dependencies]
cityjson-types          = { version = "0.10.0", path = "crates/cityjson-types" }
cityjson-json           = { version = "0.10.0", path = "crates/cityjson-json" }
cityjson-arrow          = { version = "0.10.0", path = "crates/cityjson-arrow" }
cityjson-parquet        = { version = "0.10.0", path = "crates/cityjson-parquet" }
cityjson-lib            = { version = "0.10.0", path = "crates/cityjson-lib", default-features = false }
cityjson-lib-ffi-core   = { version = "0.10.0", path = "crates/cityjson-lib/ffi/core", default-features = false }
cityjson-index          = { version = "0.10.0", path = "crates/cityjson-index" }
cityjson-index-ffi-core = { version = "0.10.0", path = "crates/cityjson-index/ffi/core" }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[profile.bench]
debug = true
