[package]
name = "cityjson-arrow"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Arrow IPC and Parquet transport for CityJSON 2.0 city models"
keywords = ["cityjson", "arrow", "parquet", "geospatial", "3d"]
categories = ["encoding", "science::geo"]
readme = "README.md"

[[bench]]
name = "split"
harness = false

[[bench]]
name = "read"
harness = false

[[bench]]
name = "write"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
arrow = { version = "58.1.0", features = ["ipc", "csv", "json"] }
arrow-buffer = "58.1.0"
arrow-json = "58.1.0"
arrow-select = "58.1.0"
cityjson-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"
tempfile = "3.23.0"
nanoserde = { version = "0.2.1", features = ["json", "std"] }
memmap2 = "0.9.9"
bytes = "1.10.1"
parquet = { version = "=58.1.0", optional = true }
num-traits = "0.2"

[features]
default = []
parquet = ["dep:parquet"]

[dev-dependencies]
rand = "0.10.1"
criterion = { version = "0.8.2", features = ["html_reports"] }
cityjson-json = { workspace = true }
