[package]
name = "cityjson-index"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
autobins = false
default-run = "cjindex"
description = "Index CityJSON datasets with a persistent SQLite sidecar"
keywords = ["cityjson", "index", "geospatial", "3d", "gis"]
categories = ["command-line-utilities", "data-structures", "science::geo"]
readme = "README.md"
exclude = [
    "Cargo.lock",
    "docs/",
    ".github/",
    "ffi/",
    "src/bin/",
    "tests/",
    "justfile",
]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
no-deps = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["rlib"]

[[bin]]
name = "cjindex"
path = "src/main.rs"

[[bin]]
name = "bench-index"
path = "src/bin/bench-index.rs"

[lints]
workspace = true

[dependencies]
cityjson-types = { workspace = true }
cityjson-lib = { workspace = true, features = ["json"] }
clap = { version = "4.6.0", features = ["derive"] }
flatgeobuf = { version = "6.0.1", default-features = false }
flate2 = "1"
globset = "0.4"
ignore = "0.4"
lru = "0.18.0"
memmap2 = "0.9"
rusqlite = { version = "0.37.0", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = "0.11"
thiserror = "2"

[dev-dependencies]
walkdir = "2"

[package.metadata.release]
pre-release-replacements = [
    { file = "ffi/python/pyproject.toml", search = "^version = \"[^\"]+\"$", replace = "version = \"{{version}}\"", exactly = 1, min = 1 },
    { file = "ffi/python/pyproject.toml", search = "cityjson-lib==[0-9]+\\.[0-9]+\\.[0-9]+", replace = "cityjson-lib=={{version}}", exactly = 1, min = 1 },
]
