[package]
name = "cityjson-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level CityJSON 2.0 read/write facade integrating JSON I/O"
keywords = ["cityjson", "geospatial", "3d", "gis"]
categories = ["encoding", "science::geo"]
readme = "README.md"
autobenches = false
include = [
    "/src",
    "/examples",
    "/tests",
    "/docs",
    "/resources",
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/LICENSE-APACHE",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["json"]
json = ["dep:cityjson-json"]
arrow = ["json", "dep:cityjson-arrow"]
parquet = ["json", "dep:cityjson-arrow", "dep:cityjson-parquet"]
proj = [
    "json",
    "dep:proj-sys",
    "dep:libsqlite3-sys",
    "dep:libc",
    "dep:num-traits",
    "dep:thiserror",
]

[lib]
name = "cityjson_lib"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
cityjson-types = { workspace = true }
cityjson-arrow = { workspace = true, optional = true }
cityjson-json = { workspace = true, optional = true }
cityjson-parquet = { workspace = true, optional = true }
libc = { version = "0.2", optional = true }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"], optional = true }
num-traits = { version = "0.2", optional = true }
proj-sys = { version = "0.27.0", features = ["bundled_proj", "network"], optional = true }
serde_json = "1.0"
thiserror = { version = "2.0", optional = true }

[dev-dependencies]
criterion = "0.7"
dhat = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tempfile = "3.23"

[package.metadata.release]
pre-release-replacements = [
    { file = "ffi/python/pyproject.toml", search = "^version = \"[^\"]+\"$", replace = "version = \"{{version}}\"", exactly = 1, min = 1 },
]
