[package]
name = "cityjson-parquet"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Parquet read/write for CityJSON 2.0 city models via cityjson-arrow"
keywords = ["cityjson", "parquet", "arrow", "geospatial", "3d"]
categories = ["encoding", "science::geo"]
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
cityjson-arrow = { workspace = true }
arrow = { version = "58.1.0", features = ["ipc"] }
arrow-array = "58.1.0"
arrow-ipc = "58.1.0"
arrow-schema = "58.1.0"
cityjson-types = { workspace = true }
memmap2 = "0.9.9"
parquet = "=58.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "package"
harness = false

[dev-dependencies]
cityjson-json = { workspace = true }
tempfile = "3"
criterion = { version = "0.8.2", features = ["html_reports"] }
