[package]
name = "cityjson-lib-ffi-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared C-compatible FFI core for the cityjson-lib Python and C++ bindings"
readme = "README.md"
keywords = ["cityjson", "ffi", "c-abi", "geospatial"]
categories = ["api-bindings", "science::geo"]
include = [
    "/Cargo.toml",
    "/README.md",
    "/LICENSE",
    "/LICENSE-APACHE",
    "/cbindgen.toml",
    "/include",
    "/src",
    "/tests",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["native-formats"]
native-formats = ["cityjson-lib/arrow", "cityjson-lib/parquet"]
proj = ["cityjson-lib/proj"]

[lib]
name = "cityjson_lib_ffi_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[lints]
workspace = true

[dependencies]
cityjson-lib = { workspace = true, features = ["json"] }
serde_json = { version = "1.0", features = ["raw_value"] }

[dev-dependencies]
tempfile = "3.23"
